--- a/mathmuncher/MathMuncherMain/MathMuncherMain/MathMuncherMain.csproj
+++ b/mathmuncher/MathMuncherMain/MathMuncherMain/MathMuncherMain.csproj
@@ -74,6 +74,7 @@
     <Reference Include="system" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Windows.Controls.Data.Input" />
     <Reference Include="System.Windows.Controls.Toolkit, Version=4.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System.Windows.Controls.Toolkit.Internals, Version=4.0.5.0, Culture=neutral, PublicKeyToken=2c5c654d367bf4a7" />
     <Reference Include="System.Windows.Interactivity" />
@@ -155,11 +156,15 @@
     <Compile Include="Lessons\Factors\ViewModels\FactorsG7_1ViewModel.cs" />
     <Compile Include="Lessons\Factors\ViewModels\FactorsG7_GGFViewModel.cs" />
     <Compile Include="Lessons\Factors\ViewModels\MessageBundles.cs" />
+    <Compile Include="Lessons\Factors\ViewModels\PrimeFactorsModel.cs" />
     <Compile Include="Lessons\Factors\Views\FactorsG7_1.xaml.cs">
       <DependentUpon>FactorsG7_1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Lessons\Factors\Views\FactorsG7_GGF.xaml.cs">
       <DependentUpon>FactorsG7_GGF.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Lessons\Factors\Views\PrimeFactors.xaml.cs">
+      <DependentUpon>PrimeFactors.xaml</DependentUpon>
     </Compile>
     <Compile Include="SampleData\Sampledata.cs" />
     <Compile Include="Service References\Exercise\Reference.cs">
@@ -267,6 +272,10 @@
     <Page Include="Lessons\Factors\Views\FactorsG7_GGF.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Lessons\Factors\Views\PrimeFactors.xaml">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\ErrorWindow.xaml">
       <SubType>Designer</SubType>
